# fullstack

./: .pre-commit-config.yaml  README.md  cookiecutter.json  dockerfile  justfile  pyproject.toml
.github/workflows/: train.yml
app/: inference_endpoint.py  training_endpoint.py
hooks/: post_gen_project.py  pre_gen_project.py
src/fullstack/pipelines/: feature_pipeline.py  inference_pipeline.py
src/fullstack/scripts/: feature_store_utils.py  inference_utils.py
{{cookiecutter.project_slug}}/: .gitignore  README.md  dockerfile  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: train.yml
{{cookiecutter.project_slug}}/app/: inference_endpoint.py  training_endpoint.py
{{cookiecutter.project_slug}}/conf/: config.yaml
{{cookiecutter.project_slug}}/conf/model/: model.yaml
{{cookiecutter.project_slug}}/conf/paths/: paths.yaml
{{cookiecutter.project_slug}}/conf/pipeline/: pipeline.yaml
{{cookiecutter.project_slug}}/conf/preprocessing/: preprocessing.yaml
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/pipelines/: inference_pipeline.py  training_pipeline.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/scripts/: data_loader.py  model_training.py
