[project]
name = "fullstack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hydra-core>=1.3.2",
    "justfile>=0.0.1a0",
    "pre-commit>=4.3.0",
    "ruff>=0.14.0",
    "ty>=0.0.1a22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fullstack"]
