[project]
name = "fullstack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.3",
    "hydra-core>=1.3.2",
    "pre-commit>=4.3.0",
    "rust-just>=1.43.0",
    "ruff>=0.14.0",
    "ty>=0.0.1a22",
    "uvicorn>=0.37.0",
    "cookiecutter>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fullstack"]
